--- a/Frontend/style.css
+++ b/Frontend/style.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: 'Poppins', sans-serif;
@@ -132,7 +135,7 @@ header {
   justify-content: center;
   z-index: 999;
   font-family: 'Montserrat', sans-serif;
-  border-bottom: 1px solid #e5e7eb; /* optional subtle divider */
+  border-bottom: 0px solid #e5e7eb; /* optional subtle divider */
 }
 
 /* Banner Text */
@@ -150,6 +153,7 @@ header {
   }
   .scrolling-text {
     font-size: 15px;
+    letter-spacing:2px;
   }
 }
 
@@ -157,6 +161,7 @@ header {
 @media (max-width: 768px) {
   .pink-banner {
     height: 22px;
+    top:76px;
   }
   .scrolling-text {
     font-size: 12.5px;
@@ -183,10 +188,10 @@ header {
 .scrolling-text-black {
   display: inline-block;
   padding-left: 100%; /* start outside right */
-  animation: scroll-left-black 12s linear infinite;
-  font-weight: 600;
-  letter-spacing: 2px;
-  font-size: 16px;
+  animation: scroll-left-black 8s linear infinite;
+  font-weight: 200;
+  letter-spacing: 5px;
+  font-size: 55px;
   color: #fff; /* white text */
 }
 
@@ -208,8 +213,8 @@ header {
   }
   .scrolling-text-black {
     font-size: 50px;
-    font-weight:400;
-    animation-duration: 10s;
+    font-weight:200;
+    animation-duration: 8s;
   }
 }
 
@@ -220,8 +225,8 @@ header {
   }
   .scrolling-text-black {
     font-size: 50px;
-    font-weight:400;
-    animation-duration: 15s; /* slower on mobile */
+    font-weight:200;
+    animation-duration: 8s; /* slower on mobile */
   }
 }
 
@@ -318,13 +323,13 @@ header {
   bottom: 40px;
   left: 50%;
   transform: translateX(-50%);
-  background: rgba(255, 182, 193, 0.9); /* soft pink overlay */
-  color: #000;
+  background:#000;
+  color: white;
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 700;
   letter-spacing: 1px;
-  padding: 12px 32px;
-  border-radius: 30px;
+  padding: 22px 32px;
+  border-radius:7%;
   text-decoration: none;
   transition: all 0.3s ease;
   opacity:0%;
@@ -355,7 +360,7 @@ header {
   }
   .shop-now-btn1 {
     font-size: 16px;
-    padding: 8px 22px;
+    padding: 22px 32px;
     bottom: 20px;
   }
   .photo-banner{
@@ -371,13 +376,14 @@ header {
 
 .new-products h2, .under-999-section h2 {
   font-size: 28px;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
   color: #111;
   letter-spacing:10px;
 }
 
 .product-container {
   display: flex;
+  
   flex-wrap: wrap;
   justify-content: center;
   gap: 40px;
@@ -412,7 +418,7 @@ header {
 
 .container .top img {
   width: 100%;
-  height: 280px;
+  height: 430px;
   object-fit: cover;
 }
 
@@ -428,8 +434,21 @@ header {
 
 .details p {
   font-size: 20px;
+  
   color: black;
 }
+.left .details .mrp {
+  font-size: 14px;
+  font-weight: 400;
+  color:	#880808;
+  text-decoration: line-through; /* cross out MRP */
+  margin-top: 3px;
+}
+
+.left .details .mrp span {
+  color:black;
+}
+
 
 .buy {
   position: absolute;
