--- a/Frontend/cart.css
+++ b/Frontend/cart.css
@@ -132,7 +132,7 @@ header {
   justify-content: center;
   z-index: 999;
   font-family: 'Montserrat', sans-serif;
-  border-bottom: 1px solid #e5e7eb;
+  border-bottom: 0px solid #e5e7eb;
 }
 
 /* Banner Text */
@@ -157,6 +157,7 @@ header {
 @media (max-width: 768px) {
   .pink-banner {
     height: 22px;
+    top:76px;
   }
   .scrolling-text {
     font-size: 12.5px;
